--- a/src/input.css
+++ b/src/input.css
@@ -18,9 +18,8 @@
   h3 {
     @apply text-drak-color font-bold text-2xl;
   }
-  p,
-  a {
-    @apply text-gray-color text-[14px]  md:text-sm lg:font-medium;
+  p {
+    @apply text-gray-color text-[14px]  md:font-medium  font-extrabold;
   }
 }
 
