--- a/src/output.css
+++ b/src/output.css
@@ -692,24 +692,14 @@ h3{
   color: rgb(3 7 18 / var(--tw-text-opacity));
 }
 
-p,
-  a{
+p{
   font-size: 14px;
-  --tw-text-opacity: 1;
-  color: rgb(128 128 128 / var(--tw-text-opacity));
+  font-weight: 800;
+  color: #12132D99;
 }
 
 @media (min-width: 768px){
-  p,
-  a{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-}
-
-@media (min-width: 1024px){
-  p,
-  a{
+  p{
     font-weight: 500;
   }
 }
@@ -814,6 +804,40 @@ p,
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .avatar.placeholder > div{
   display: flex;
   align-items: center;
@@ -877,6 +901,57 @@ p,
 .btn:is(input[type="radio"]):after{
   --tw-content: attr(aria-label);
   content: var(--tw-content);
+}
+
+.card{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--rounded-box, 1rem);
+}
+
+.card:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.card figure{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card.image-full{
+  display: grid;
+}
+
+.card.image-full:before{
+  position: relative;
+  content: "";
+  z-index: 10;
+  border-radius: var(--rounded-box, 1rem);
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-n,oklch(var(--n)/var(--tw-bg-opacity)));
+  opacity: 0.75;
+}
+
+.card.image-full:before,
+    .card.image-full > *{
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+
+.card.image-full > figure img{
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card.image-full > .card-body{
+  position: relative;
+  z-index: 20;
+  --tw-text-opacity: 1;
+  color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity)));
 }
 
 @media (hover: hover){
@@ -1076,6 +1151,44 @@ p,
   }
 }
 
+.card :where(figure:first-child){
+  overflow: hidden;
+  border-start-start-radius: inherit;
+  border-start-end-radius: inherit;
+  border-end-start-radius: unset;
+  border-end-end-radius: unset;
+}
+
+.card :where(figure:last-child){
+  overflow: hidden;
+  border-start-start-radius: unset;
+  border-start-end-radius: unset;
+  border-end-start-radius: inherit;
+  border-end-end-radius: inherit;
+}
+
+.card:focus-visible{
+  outline: 2px solid currentColor;
+  outline-offset: 2px;
+}
+
+.card.bordered{
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
+}
+
+.card.compact .card-body{
+  padding: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.card.image-full :where(figure){
+  overflow: hidden;
+  border-radius: inherit;
+}
+
 @keyframes checkmark{
   0%{
     background-position-y: 5px;
@@ -1263,9 +1376,21 @@ p,
   }
 }
 
-.background {
-  background: linear-gradient(90deg, #12132d, #12132d),
-      url("images/bgbanner.png");
+.avatar.online:before{
+  content: "";
+  position: absolute;
+  z-index: 10;
+  display: block;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-su,oklch(var(--su)/var(--tw-bg-opacity)));
+  outline-style: solid;
+  outline-width: 2px;
+  outline-color: var(--fallback-b1,oklch(var(--b1)/1));
+  width: 15%;
+  height: 15%;
+  top: 7%;
+  right: 7%;
 }
 
 section{
@@ -1285,25 +1410,115 @@ section{
   bottom: 0px;
 }
 
+.right-0{
+  right: 0px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.-right-1{
+  right: -0.25rem;
+}
+
+.-top-1{
+  top: -0.25rem;
+}
+
+.z-10{
+  z-index: 10;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
   display: flex;
 }
 
+.h-7{
+  height: 1.75rem;
+}
+
 .h-\[550px\]{
   height: 550px;
+}
+
+.h-\[72px\]{
+  height: 72px;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
+.w-\[370px\]{
+  width: 370px;
+}
+
+.w-\[72px\]{
+  width: 72px;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-full{
   width: 100%;
 }
 
-.w-\[370px\]{
-  width: 370px;
+.w-16{
+  width: 4rem;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.max-w-xs{
+  max-width: 20rem;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-col{
@@ -1322,28 +1537,39 @@ section{
   justify-content: space-between;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
 }
 
 .gap-20{
   gap: 5rem;
 }
 
-.space-y-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+.gap-5{
+  gap: 1.25rem;
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]){
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
@@ -1352,8 +1578,16 @@ section{
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
-.rounded-full{
-  border-radius: 9999px;
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .rounded-2xl{
@@ -1364,9 +1598,42 @@ section{
   border-radius: 1.5rem;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-dashed{
+  border-style: dashed;
+}
+
+.border-none{
+  border-style: none;
+}
+
+.border-gray-color{
+  border-color: #12132D99;
+}
+
+.bg-\[\#10B981\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#12132D\]{
   --tw-bg-opacity: 1;
   background-color: rgb(18 19 45 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#797DFC1A\]{
+  background-color: #797DFC1A;
 }
 
 .bg-light-color{
@@ -1374,12 +1641,32 @@ section{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-20{
-  padding: 5rem;
+.bg-\[\#12132D4D\]{
+  background-color: #12132D4D;
+}
+
+.bg-\[\#12132D40\]{
+  background-color: #12132D40;
+}
+
+.p-1{
+  padding: 0.25rem;
 }
 
 .p-10{
   padding: 2.5rem;
+}
+
+.p-20{
+  padding: 5rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .px-7{
@@ -1392,17 +1679,85 @@ section{
   padding-bottom: 1.25rem;
 }
 
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .font-extrabold{
   font-weight: 800;
 }
 
+.leading-snug{
+  line-height: 1.375;
+}
+
+.text-\[\#3DCE09\]{
+  --tw-text-opacity: 1;
+  color: rgb(61 206 9 / var(--tw-text-opacity));
+}
+
+.text-\[\#6264FB\]{
+  --tw-text-opacity: 1;
+  color: rgb(98 100 251 / var(--tw-text-opacity));
+}
+
+.text-gray-color{
+  color: #12132D99;
+}
+
 .text-light-color{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.hover\:border-2:hover{
+  border-width: 2px;
+}
+
+.hover\:border-4:hover{
+  border-width: 4px;
+}
+
+.hover\:border-\[\#797DFC\]:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(121 125 252 / var(--tw-border-opacity));
+}
+
+.hover\:bg-\[\#797DFC26\]:hover{
+  background-color: #797DFC26;
+}
+
+.hover\:bg-\[\#797DFC21\]:hover{
+  background-color: #797DFC21;
+}
+
+.active\:scale-105:active{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 640px){
@@ -1417,8 +1772,21 @@ section{
     margin-right: 0px;
   }
 
+  .md\:w-\[380px\]{
+    width: 380px;
+  }
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:text-left{
+    text-align: left;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
@@ -1461,13 +1829,4 @@ section{
 
 .\[\&\>span\]\:justify-between>span{
   justify-content: space-between;
-}
-
-.\[\&\>span\]\:gap-5>span{
-  gap: 1.25rem;
-}
-
-.\[\&\>span\]\:text-light-color>span{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
